tests/errors/operand_type_53/e5.src
.IPPcode21

DEFVAR GF@ADD

AND GF@ADD int@2 int@3
